# deputado_analysis

./: .gitignore  README.md  app.py  index.html  proxies.txt  pyproject.toml  teste.py
data/processed/: id_partido.csv  id_uf.csv  maiores_gastos_filtrados.csv  nome_id.csv  valor_total_despesa.csv  valor_total_por_ano.csv
data/raw/: deputados.csv  maiores_gastos.csv
docs/: analogia.md  architecture.md  desafios_tecnicos.md  oq_fiz_de_novo.md
notebooks/: view_deputados.ipynb
src/deputado_analysis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/extract/: api_deputados.py  api_despesas_deputados.py  api_id_deputados.py  api_legislaturas.py  csv_deputados.py  csv_despesas_deputados.py
src/load/: save_csv_deputados.py  save_csv_despesas.py  save_csv_slicing.py  save_csv_valor_total_despesa.py
src/transform/: cleaning_deputados.py  cleaning_deputados_id.py  cleaning_despesas.py  cleaning_legislaturas.py  limpeza_deputados.py  os_maiores_gastos.py  slicing_transform_df.py  transform_nome_id.py  transform_valortotal_despesas.py
