[project]
name = "deputado_analysis"
version = "0.1.0"
description = "Análise de despesas de deputados durante a 57ª Legislatura"
authors = [
    {name = "Augusto Cesar", email = "tiaugustocesar@gmail.com"}
]

dependencies = [
    "requests",
    "polars",
]

[project.urls]
homepage = "https://github.com/elninosantz/deputado_analysis"
repository = "https://github.com/elninosantz/deputado_analysis"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
